@@ -10,12 +10,15 @@ import no.nav.common.types.identer.Fnr;
 import no.nav.pto.veilarbportefolje.database.Table.OPPFOLGINGSBRUKER;
 import no.nav.pto.veilarbportefolje.database.Table.OPPFOLGING_DATA;
 import no.nav.pto.veilarbportefolje.database.Table.VW_PORTEFOLJE_INFO;
-import no.nav.pto.veilarbportefolje.domene.*;
+import no.nav.pto.veilarbportefolje.domene.AAPMaxtidUkeFasettMapping;
+import no.nav.pto.veilarbportefolje.domene.AAPUnntakUkerIgjenFasettMapping;
+import no.nav.pto.veilarbportefolje.domene.Brukerdata;
+import no.nav.pto.veilarbportefolje.domene.DagpengerUkeFasettMapping;
+import no.nav.pto.veilarbportefolje.domene.ManedFasettMapping;
+import no.nav.pto.veilarbportefolje.domene.YtelseMapping;
 import no.nav.pto.veilarbportefolje.domene.value.PersonId;
 import no.nav.pto.veilarbportefolje.domene.value.VeilederId;
 import no.nav.pto.veilarbportefolje.opensearch.domene.OppfolgingsBruker;
-import no.nav.pto.veilarbportefolje.util.DbUtils;
-import no.nav.pto.veilarbportefolje.util.UnderOppfolgingRegler;
 import no.nav.sbl.sql.SqlUtils;
 import no.nav.sbl.sql.where.WhereClause;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -27,7 +30,12 @@ import java.math.BigDecimal;
 import java.sql.ResultSet;
 import java.sql.Timestamp;
 import java.time.LocalDateTime;
-import java.util.*;
+import java.util.Collection;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 import static java.util.Collections.emptyList;
@@ -38,10 +46,14 @@ import static java.util.stream.Collectors.toList;
 import static no.nav.pto.veilarbportefolje.database.Table.AKTOERID_TO_PERSONID;
 import static no.nav.pto.veilarbportefolje.database.Table.VW_PORTEFOLJE_INFO.AKTOERID;
 import static no.nav.pto.veilarbportefolje.database.Table.VW_PORTEFOLJE_INFO.FODSELSNR;
-import static no.nav.pto.veilarbportefolje.util.DbUtils.*;
+import static no.nav.pto.veilarbportefolje.util.DbUtils.mapTilOppfolgingsBruker;
+import static no.nav.pto.veilarbportefolje.util.DbUtils.not;
+import static no.nav.pto.veilarbportefolje.util.DbUtils.parseJaNei;
 import static no.nav.pto.veilarbportefolje.util.StreamUtils.batchProcess;
-import static no.nav.sbl.sql.SqlUtils.*;
-import static no.nav.sbl.sql.where.WhereClause.gt;
+import static no.nav.sbl.sql.SqlUtils.insert;
+import static no.nav.sbl.sql.SqlUtils.select;
+import static no.nav.sbl.sql.SqlUtils.update;
+import static no.nav.sbl.sql.SqlUtils.upsert;
 import static no.nav.sbl.sql.where.WhereClause.in;
 
 @Slf4j
@@ -57,43 +69,6 @@ public class BrukerRepository {
         this.namedParameterJdbcTemplate = namedParameterJdbcTemplate;
     }
 
-    public List<OppfolgingsBruker> hentAlleBrukereUnderOppfolging() {
-        db.setFetchSize(10_000);
-
-        List<OppfolgingsBruker> alleBrukere = SqlUtils
-                .select(db, Table.VW_PORTEFOLJE_INFO.TABLE_NAME, rs -> harOppfolgingsFlaggSatt(rs) ? mapTilOppfolgingsBruker(rs) : null)
-                .column("*")
-                .executeToList()
-                .stream()
-                .filter(Objects::nonNull)
-                .collect(toList());
-        db.setFetchSize(-1);
-        return alleBrukere;
-    }
-
-    public List<String> hentFnrFraOppfolgingBrukerTabell(int fromExclusive, int toInclusive) {
-        String sql = "SELECT FODSELSNR "
-                     + "FROM (SELECT "
-                     + "BRUKER.FODSELSNR, "
-                     + "rownum rn "
-                     + "FROM ( "
-                     + "SELECT * "
-                     + "FROM OPPFOLGINGSBRUKER "
-                     + "ORDER BY FODSELSNR "
-                     + ") "
-                     + "BRUKER "
-                     + "WHERE rownum <= :to "
-                     + ")"
-                     + "WHERE rn > :from ";
-
-        Map<String, Integer> parameters = Map.of(
-                "from", fromExclusive,
-                "to", toInclusive
-        );
-
-        return namedParameterJdbcTemplate.queryForList(sql, parameters, String.class);
-    }
-
     public Optional<Integer> hentAntallBrukereUnderOppfolging() {
         Integer count = db.query(countOppfolgingsBrukereSql(), rs -> {
             rs.next();
@@ -104,28 +79,31 @@ public class BrukerRepository {
 
     private String countOppfolgingsBrukereSql() {
         return "SELECT COUNT(*) FROM VW_PORTEFOLJE_INFO " +
-               "WHERE FORMIDLINGSGRUPPEKODE = 'ARBS' " +
-               "OR OPPFOLGING = 'J' " +
-               "OR (FORMIDLINGSGRUPPEKODE = 'IARBS' AND KVALIFISERINGSGRUPPEKODE IN ('BATT', 'BFORM', 'VARIG', 'IKVAL', 'VURDU', 'OPPFI'))";
+                "WHERE FORMIDLINGSGRUPPEKODE = 'ARBS' " +
+                "OR OPPFOLGING = 'J' " +
+                "OR (FORMIDLINGSGRUPPEKODE = 'IARBS' AND KVALIFISERINGSGRUPPEKODE IN ('BATT', 'BFORM', 'VARIG', 'IKVAL', 'VURDU', 'OPPFI'))";
     }
 
-    public List<OppfolgingsBruker> hentOppdaterteBrukere() {
-        db.setFetchSize(1000);
-
-        Timestamp sistIndeksert = SqlUtils
-                .select(db, Table.METADATA.TABLE_NAME, rs -> rs.getTimestamp(Table.METADATA.SIST_INDEKSERT_ES))
-                .column(Table.METADATA.SIST_INDEKSERT_ES)
-                .execute();
-
-        return SqlUtils
-                .select(db, VW_PORTEFOLJE_INFO.TABLE_NAME, DbUtils::mapTilOppfolgingsBruker)
-                .column("*")
-                .where(gt("TIDSSTEMPEL", sistIndeksert))
-                .executeToList();
+    public Optional<AktorId> hentAktorIdFraView(Fnr fnr) {
+        return Optional.ofNullable(
+                select(db, VW_PORTEFOLJE_INFO.TABLE_NAME, rs -> rs.getString("AKTOERID"))
+                        .column("AKTOERID")
+                        .where(WhereClause.equals("FODSELSNR", fnr.toString()))
+                        .execute()
+        ).map(AktorId::of);
     }
 
-    public Optional<OppfolgingsBruker> hentBrukerFraView(AktorId aktoerId) {
-        final OppfolgingsBruker bruker = select(db, VW_PORTEFOLJE_INFO.TABLE_NAME, DbUtils::mapTilOppfolgingsBruker)
+    public Optional<AktorId> hentAktorIdFraView(PersonId personid) {
+        return Optional.ofNullable(
+                select(db, VW_PORTEFOLJE_INFO.TABLE_NAME, rs -> rs.getString("AKTOERID"))
+                        .column("AKTOERID")
+                        .where(WhereClause.equals("PERSON_ID", personid.toString()))
+                        .execute()
+        ).map(AktorId::of);
+    }
+
+    public Optional<OppfolgingsBruker> hentBrukerFraView(AktorId aktoerId, boolean brukPostgres) {
+        final OppfolgingsBruker bruker = select(db, VW_PORTEFOLJE_INFO.TABLE_NAME, rs -> mapTilOppfolgingsBruker(rs, brukPostgres))
                 .column("*")
                 .where(WhereClause.equals("AKTOERID", aktoerId.toString()))
                 .execute();
@@ -133,50 +111,22 @@ public class BrukerRepository {
         return Optional.ofNullable(bruker);
     }
 
-    public Optional<OppfolgingsBruker> hentBrukerFraView(Fnr fnr) {
-        final OppfolgingsBruker bruker = select(db, VW_PORTEFOLJE_INFO.TABLE_NAME, DbUtils::mapTilOppfolgingsBruker)
-                .column("*")
-                .where(WhereClause.equals("FODSELSNR", fnr.toString()))
-                .execute();
 
-        return Optional.ofNullable(bruker);
-    }
-
-    public Optional<OppfolgingsBruker> hentBrukerFraView(PersonId personid) {
-        final OppfolgingsBruker bruker = select(db, VW_PORTEFOLJE_INFO.TABLE_NAME, DbUtils::mapTilOppfolgingsBruker)
-                .column("*")
-                .where(WhereClause.equals("PERSON_ID", personid.toString()))
-                .execute();
-
-        return Optional.ofNullable(bruker);
-    }
-
-    public List<OppfolgingsBruker> hentBrukereFraView(List<AktorId> aktorIds) {
+    public List<OppfolgingsBruker> hentBrukereFraView(List<AktorId> aktorIds, boolean brukPostgres) {
         db.setFetchSize(1000);
         List<String> ids = aktorIds.stream().map(AktorId::get).collect(toList());
         return SqlUtils
-                .select(db, VW_PORTEFOLJE_INFO.TABLE_NAME, rs -> erUnderOppfolging(rs) ? mapTilOppfolgingsBruker(rs) : null)
+                .select(db, VW_PORTEFOLJE_INFO.TABLE_NAME, rs -> erUnderOppfolging(rs) ? mapTilOppfolgingsBruker(rs, brukPostgres) : null)
                 .column("*")
                 .where(in("AKTOERID", ids))
                 .executeToList()
                 .stream()
                 .filter(Objects::nonNull)
-                .collect(toList());
-    }
-
-    public boolean erUnderOppfolging(ResultSet rs) {
-        return harOppfolgingsFlaggSatt(rs) || erUnderOppfolgingIArena(rs);
+                .toList();
     }
 
     @SneakyThrows
-    private static boolean erUnderOppfolgingIArena(ResultSet rs) {
-        String formidlingsgruppekode = rs.getString("formidlingsgruppekode");
-        String kvalifiseringsgruppekode = rs.getString("kvalifiseringsgruppekode");
-        return UnderOppfolgingRegler.erUnderOppfolging(formidlingsgruppekode, kvalifiseringsgruppekode);
-    }
-
-    @SneakyThrows
-    private static boolean harOppfolgingsFlaggSatt(ResultSet rs) {
+    public static boolean erUnderOppfolging(ResultSet rs) {
         return parseJaNei(rs.getString("OPPFOLGING"), "OPPFOLGING");
     }
 
@@ -228,21 +178,12 @@ public class BrukerRepository {
         ).onFailure(e -> log.warn("Fant ikke oppfølgingsenhet for bruker"));
     }
 
-    public Try<String> retrieveNavKontor(PersonId personId) {
-        return Try.of(
-                () -> select(db, "OPPFOLGINGSBRUKER", this::mapToEnhet)
-                        .column("NAV_KONTOR")
-                        .where(WhereClause.equals("PERSON_ID", personId.toString()))
-                        .execute()
-        )
-                .onFailure(e -> log.warn("Fant ikke oppfølgingsenhet for bruker med personId {}", personId.toString()));
-    }
-
-    public Integer insertAktoeridToPersonidMapping(AktorId aktoerId, PersonId personId) {
-        return insert(db, AKTOERID_TO_PERSONID.TABLE_NAME)
-                .value("AKTOERID", aktoerId.toString())
-                .value("PERSONID", personId.toString())
-                .value("GJELDENE", 1)
+    public void upsertAktoeridToPersonidMapping(AktorId aktoerId, PersonId personId) {
+        upsert(db, AKTOERID_TO_PERSONID.TABLE_NAME)
+                .set("AKTOERID", aktoerId.toString())
+                .set("PERSONID", personId.toString())
+                .set("GJELDENE", 1)
+                .where(WhereClause.equals("AKTOERID", aktoerId.toString()))
                 .execute();
 
     }
@@ -267,29 +208,33 @@ public class BrukerRepository {
                 .select(db, AKTOERID_TO_PERSONID.TABLE_NAME, rs -> rs == null ? null : AktorId.of(rs.getString(AKTOERID_TO_PERSONID.AKTOERID)))
                 .column(AKTOERID_TO_PERSONID.AKTOERID)
                 .where(
-                    WhereClause.equals(AKTOERID_TO_PERSONID.PERSONID, personId.getValue())
-                    .and(
-                    WhereClause.equals(AKTOERID_TO_PERSONID.GJELDENE,0))
+                        WhereClause.equals(AKTOERID_TO_PERSONID.PERSONID, personId.getValue())
+                                .and(
+                                        WhereClause.equals(AKTOERID_TO_PERSONID.GJELDENE, 0))
                 ).executeToList());
     }
 
     public Try<PersonId> retrievePersonid(AktorId aktoerId) {
         return Try.of(
-                () -> select(db, AKTOERID_TO_PERSONID.TABLE_NAME, this::mapToPersonIdFromAktorIdToPersonId)
-                        .column("PERSONID")
-                        .where(WhereClause.equals("AKTOERID", aktoerId.toString()))
-                        .execute()
-        )
+                        () -> select(db, AKTOERID_TO_PERSONID.TABLE_NAME, this::mapToPersonIdFromAktorIdToPersonId)
+                                .column("PERSONID")
+                                .where(WhereClause.equals("AKTOERID", aktoerId.toString()))
+                                .execute()
+                )
                 .onFailure(e -> log.warn("Fant ikke personid for aktoerid: " + aktoerId, e));
     }
 
-    public Try<PersonId> retrievePersonidFromFnr(Fnr fnr) {
-        return Try.of(() ->
+    public Optional<PersonId> retrievePersonidFromFnr(Fnr fnr) {
+        Optional<PersonId> personId = ofNullable(
                 select(db, "OPPFOLGINGSBRUKER", this::mapPersonIdFromOppfolgingsbruker)
                         .column("PERSON_ID")
                         .where(WhereClause.equals("FODSELSNR", fnr.toString()))
                         .execute()
-        ).onFailure(e -> log.warn("Fant ikke personid for fnr: " + fnr, e));
+        );
+        if (personId.isEmpty()) {
+            log.warn("Fant ikke personid for fnr: " + fnr);
+        }
+        return personId;
     }
 
     public Try<Fnr> retrieveFnrFromPersonid(PersonId personId) {
@@ -381,6 +326,14 @@ public class BrukerRepository {
         return brukere;
     }
 
+    public List<PersonId> hentMappedePersonIder(AktorId aktorId) {
+        final String sql = "SELECT PERSONID FROM AKTOERID_TO_PERSONID WHERE GJELDENE = 1 AND AKTOERID = ?";
+        return db.queryForList(sql, String.class, aktorId.get())
+                .stream()
+                .map(PersonId::of)
+                .toList();
+    }
+
     public void insertOrUpdateBrukerdata(List<Brukerdata> brukerdata, Collection<String> finnesIDb) {
         Map<Boolean, List<Brukerdata>> eksisterendeBrukere = brukerdata
                 .stream()
@@ -408,12 +361,12 @@ public class BrukerRepository {
     private String getPersonIdsFromFnrsSQL() {
         return
                 "SELECT " +
-                "person_id, " +
-                "fodselsnr " +
-                "FROM " +
-                "OPPFOLGINGSBRUKER " +
-                "WHERE " +
-                "fodselsnr in (:fnrs)";
+                        "person_id, " +
+                        "fodselsnr " +
+                        "FROM " +
+                        "OPPFOLGINGSBRUKER " +
+                        "WHERE " +
+                        "fodselsnr in (:fnrs)";
     }
 
     private String retrieveBrukerdataSQL() {
